--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Comunes/Orbita.Controles.Comunes.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Comunes/Orbita.Controles.Comunes.csproj
@@ -106,10 +106,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clases\Base\OAparienciaBase.cs" />
+    <Compile Include="Clases\Base\OControlBase.cs" />
+    <Compile Include="Clases\Configuración\Configuracion.cs" />
+    <Compile Include="Clases\EventArgs\OPropertyChangedEventArgs.cs" />
+    <Compile Include="Clases\ExpandableObjectConverter\OAparienciaConverter.cs" />
     <Compile Include="Clases\OColumnHeaderCollection.cs" />
     <Compile Include="Clases\OColumnHeader.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Clases\Propiedades y métodos\OUltraNumericEditor.cs" />
+    <Compile Include="Clases\Propiedades y métodos\OUltraButton.cs" />
+    <Compile Include="Clases\Propiedades y métodos\OListBox.cs" />
+    <Compile Include="Clases\Propiedades y métodos\OApariencia.cs" />
+    <Compile Include="Clases\Propiedades y métodos\OUltraLabel.cs" />
     <Compile Include="Custom\OrbitaBarraProgreso.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -134,6 +144,12 @@
     <Compile Include="Custom\OrbitaUltraNumericEditorWithFilter.designer.cs">
       <DependentUpon>OrbitaUltraNumericEditorWithFilter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Enumerados\AdornoTexto.cs" />
+    <Compile Include="Enumerados\AlineacionHorizontal.cs" />
+    <Compile Include="Enumerados\AlineacionVertical.cs" />
+    <Compile Include="Enumerados\EstiloBorde.cs" />
+    <Compile Include="Enumerados\EstiloBoton.cs" />
+    <Compile Include="Estructuras\OAparienciaDatos.cs" />
     <Compile Include="UC\OrbitaUltraNumericEditor.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -256,6 +272,7 @@
     <EmbeddedResource Include="Custom\OrbitaUltraNumericEditorWithFilter.resx">
       <DependentUpon>OrbitaUltraNumericEditorWithFilter.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -279,6 +296,7 @@
       <Name>Orbita.Controles.Shared</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetDir)Orbita.Controles.Comunes.dll" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I</PostBuildEvent>
