--- a/CodigoFuente/x32/Pruebas/Orbita.PruebasUnitarias/Orbita.PruebasUnitarias.csproj
+++ b/CodigoFuente/x32/Pruebas/Orbita.PruebasUnitarias/Orbita.PruebasUnitarias.csproj
@@ -69,15 +69,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Orbita.BBDD\Orbita.BBDD.csproj">
+    <ProjectReference Include="..\..\Orbita\Orbita.BBDD\Orbita.BBDD.csproj">
       <Project>{CF7F04AE-7DA5-48C5-BB08-DC57D3192A2D}</Project>
       <Name>Orbita.BBDD</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Orbita.Trazabilidad\Orbita.Trazabilidad.csproj">
+    <ProjectReference Include="..\..\Orbita\Orbita.Trazabilidad\Orbita.Trazabilidad.csproj">
       <Project>{1A2EEC44-A494-4BA6-A591-267B73A55CD1}</Project>
       <Name>Orbita.Trazabilidad</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Orbita.Utiles\Orbita.Utiles.csproj">
+    <ProjectReference Include="..\..\Orbita\Orbita.Utiles\Orbita.Utiles.csproj">
       <Project>{DAD5D2A3-9C23-4C22-ABEB-4DF8258170AD}</Project>
       <Name>Orbita.Utiles</Name>
     </ProjectReference>
