--- a/CodigoFuente/x32/Orbita/Orbita.BBDD/Orbita.BBDD.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.BBDD/Orbita.BBDD.csproj
@@ -120,7 +120,7 @@
     </NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -132,6 +132,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRuleSetDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+    <DocumentationFile>bin\Release\Orbita.BBDD.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="IBM.Data.DB2">
