--- a/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
@@ -119,9 +119,9 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>CODE_ANALYSIS;DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>bin\Release\OrbitaTrazabilidad.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.Trazabilidad.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
