--- a/CodigoFuente/x32/Orbita/Orbita.Utiles/Orbita.Utiles.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Utiles/Orbita.Utiles.csproj
@@ -122,7 +122,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRuleSetDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
-    <DocumentationFile>bin\Release\Orbita.Utiles.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.Utiles.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="hasp_net_windows">
