--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Menu/Orbita.Controles.Menu.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Menu/Orbita.Controles.Menu.csproj
@@ -51,7 +51,7 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
-    <DocumentationFile>bin\Release\Orbita.Controles.Menu.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.Controles.Menu.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Infragistics2.Shared.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
