--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Shared/Orbita.Controles.Shared.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Shared/Orbita.Controles.Shared.csproj
@@ -35,6 +35,7 @@
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
+    <DocumentationFile>bin\x86\Debug\Orbita.Controles.Shared.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\Release\</OutputPath>
