--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Contenedores/Orbita.Controles.Contenedores.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Contenedores/Orbita.Controles.Contenedores.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\Configuración\OConfiguracion.cs" />
+    <Compile Include="Clases\Propiedades y métodos\OMdiForm.cs" />
     <Compile Include="Clases\Propiedades y métodos\OForm.cs" />
     <Compile Include="Clases\Propiedades y métodos\ODialog.cs" />
     <Compile Include="Clases\Propiedades y métodos\OTableLayoutPanel.cs" />
